--- a/index.html
+++ b/index.html
@@ -309,10 +309,14 @@
 				<div class="col s12 m4 l4 hide-on-small-only">
 					<div class="row">
 						<div class="col s12 m12 l12">
-							<img src="assets/images/noticias/image1.jpg" class="width-full">
+							<a href="noticia.html">
+								<img src="assets/images/noticias/image1.jpg" class="width-full">	
+							</a>							
 						</div>
 						<div class="col s12 m12 l12">
-							<img src="assets/images/noticias/image1.jpg" class="width-full">
+							<a href="noticia.html">
+								<img src="assets/images/noticias/image1.jpg" class="width-full">	
+							</a>							
 						</div>
 					</div>
 				</div>
@@ -320,7 +324,7 @@
 					<div class="slider">
 					    <ul class="slides">
 					      	<li>
-					      		<a href="#!">
+					      		<a href="noticia.html">
 					      			<img src="http://lorempixel.com/580/250/nature/1">
 							        <div class="caption center-align">
 							          	<h3>This is our big Tagline!</h3>
@@ -329,7 +333,7 @@
 					      		</a>					        
 					      	</li>
 					      	<li>
-					      		<a href="#!">
+					      		<a href="noticia.html">
 					      			<img src="http://lorempixel.com/580/250/nature/2">
 							        <div class="caption left-align">
 							          	<h3>Left Aligned Caption</h3>
@@ -338,7 +342,7 @@
 					      		</a>					        
 						      </li>
 					      	<li>
-					      		<a href="#!">
+					      		<a href="noticia.html">
 					      			<img src="http://lorempixel.com/580/250/nature/3">
 							        <div class="caption right-align">
 						          		<h3>Right Aligned Caption</h3>
@@ -347,7 +351,7 @@
 					      		</a>					        
 				    	  	</li>
 					      	<li>
-				      			<a href="#!">
+				      			<a href="noticia.html">
 					      			<img src="http://lorempixel.com/580/250/nature/4">
 							        <div class="caption center-align">
 						          		<h3>This is our big Tagline!</h3>
@@ -362,13 +366,19 @@
 
 			<div class="row">
 				<div class="col s12 m4 l4">
-					<img src="assets/images/noticias/image2.jpg" class="width-full">	
+					<a href="noticia.html">
+						<img src="assets/images/noticias/image2.jpg" class="width-full">		
+					</a>					
 				</div>
 				<div class="col s12 m4 l4 hide-on-small-only">
-					<img src="assets/images/noticias/image1.jpg" class="width-full">	
+					<a href="noticia.html">
+						<img src="assets/images/noticias/image1.jpg" class="width-full">		
+					</a>					
 				</div>
 				<div class="col s12 m4 l4 hide-on-small-only">
-					<img src="assets/images/noticias/image2.jpg" class="width-full">	
+					<a href="noticia.html">
+						<img src="assets/images/noticias/image2.jpg" class="width-full">		
+					</a>					
 				</div>
 			</div>
 		</div>	
@@ -431,6 +441,7 @@
 		</div>		
 	</div>
 
+	<i class="ir-arriba material-icons">keyboard_arrow_up</i>
 
 
 
