--- a/index.html
+++ b/index.html
@@ -108,7 +108,60 @@
 	</div>
 
 	<div class="parallax-container align-horizontal-vertical background-image" id="content-somos">
-		<img src="assets/images/institucion/logoice.png" class="width-image-somos" />
+		
+		<div class="row width-full">
+			<div class="col s12">
+			<br><br>
+				<div class="carousel carousel-slider center height-vh" id="carousel-somos" data-indicators="true">
+				    <div class="carousel-item white-text" href="#one!">
+				    	<div class="height-vh width-full align-horizontal-vertical">
+				    		<img src="assets/images/institucion/logoice.png" class="tamano-image-logo">	
+				    	</div>
+				    </div>
+				    <div class="carousel-item" href="#two!">
+			      		<div class="row height-vh width-full padding-clean align-horizontal-vertical padding-left-right-carousel">
+			      			<div class="col s12 m6 margin-bottom-carousel">
+			      				<h2 class="text-style-carousel-title quitar-margin">Mision</h2>
+		      					<p class="text-justify text-style-carousel">
+		      						is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+		      					</p>
+		      					<p class="text-justify text-style-carousel">
+		      						is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		      					</p>		
+			      			</div>
+			      			<div class="col s12 m6">
+			      				<h2 class="text-style-carousel-title quitar-margin">Vision</h2>
+			      				<p class="text-justify text-style-carousel">
+		      						It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.
+		      					</p>
+		      					<p class="text-justify text-style-carousel">
+		      						is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		      					</p>
+			      			</div>
+			      		</div>
+				    </div>
+				    <div class="carousel-item" href="#three!">
+		      			<div class="row height-vh width-full align-horizontal-vertical padding-left-right-carousel">
+			      			<div class="col s12 m12">
+			      				<h2 class="text-style-carousel-title quitar-margin">Marco General</h2>
+		      					<p class="text-justify text-style-carousel">
+		      						is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		      					</p>
+
+		      					<p class="text-justify text-style-carousel">
+		      						is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		      					</p>
+
+		      					<p class="text-justify text-style-carousel">
+		      						is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		      					</p>		
+			      			</div>
+			      		</div>
+				    </div>
+			  	</div>		
+			</div>
+		</div>
+
     </div>
 
     <div class="parallax-container align-horizontal-vertical background-datahub animated" id="content-datahub">
