change design noticias and index

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 	<title>ICE (Instituto Cruceno de Estadistica)</title>
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/materialize.min.css">
 	<link rel="stylesheet" href="assets/css/animate.css">
@@ -309,7 +310,7 @@
 
     </div>
 	
-	<div class="parallax-container margin-top-datahub" id="content-boletines">
+	<div class="parallax-container align-horizontal-vertical padding-top-boletin" id="content-boletines">
 
 	  	<div id="diapo">
 	    	<div class="align-horizontal-vertical">
@@ -371,12 +372,12 @@
 			<div class="row">
 				<div class="col s12 m4 l4 hide-on-small-only">
 					<div class="row">
-						<div class="col s12 m12 l12">
+						<div class="col s12 m12 l12 padding-clean-important">
 							<a href="noticia.html">
 								<img src="assets/images/noticias/image1.jpg" class="width-full">	
 							</a>							
 						</div>
-						<div class="col s12 m12 l12">
+						<div class="col s12 m12 l12 padding-clean-important">
 							<a href="noticia.html">
 								<img src="assets/images/noticias/image1.jpg" class="width-full">	
 							</a>							
@@ -385,10 +386,10 @@
 				</div>
 				<div class="col s12 m8 l8">
 					<div class="slider">
-					    <ul class="slides">
-					      	<li>
+					    <ul class="slides background-none">
+					      	<li class="black">
 					      		<a href="noticia.html">
-					      			<img src="http://lorempixel.com/580/250/nature/1">
+					      			<img src="assets/images/noticias/image1.jpg" />
 							        <div class="caption center-align">
 							          	<h3>This is our big Tagline!</h3>
 							          	<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -397,7 +398,7 @@
 					      	</li>
 					      	<li>
 					      		<a href="noticia.html">
-					      			<img src="http://lorempixel.com/580/250/nature/2">
+					      			<img src="assets/images/noticias/image5.jpg">
 							        <div class="caption left-align">
 							          	<h3>Left Aligned Caption</h3>
 						         	 	<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
@@ -406,22 +407,13 @@
 						      </li>
 					      	<li>
 					      		<a href="noticia.html">
-					      			<img src="http://lorempixel.com/580/250/nature/3">
+					      			<img src="assets/images/noticias/image6.jpg">
 							        <div class="caption right-align">
 						          		<h3>Right Aligned Caption</h3>
 						          		<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
 							        </div>	
 					      		</a>					        
 				    	  	</li>
-					      	<li>
-				      			<a href="noticia.html">
-					      			<img src="http://lorempixel.com/580/250/nature/4">
-							        <div class="caption center-align">
-						          		<h3>This is our big Tagline!</h3>
-							          	<h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-							        </div>	
-					      		</a>					        
-					      	</li>
 					    </ul>
 				  	</div>
 				</div>
@@ -453,10 +445,10 @@
 		<div class="container-fluid height-vh-important">
 			<div class="row height-vh-important">
 				<div class="col l6 hide-on-small-only hide-on-med-only height-vh-important align-horizontal-vertical">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d2686.4393015116693!2d-63.18221908053244!3d-17.78234714382474!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x0%3A0x37ace253ab97ec04!2sGobierno+Municipal+de+Santa+Cruz+de+la+Sierra!3m2!1d-17.7822702!2d-63.181950199999996!5e0!3m2!1sen!2sbo!4v1471529867605" width="90%" height="70%" frameborder="0" style="border:0;" allowfullscreen></iframe>	
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.1924467508056!2d-63.18273422939118!3d-17.782650333962067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93f1e80cf95f2a61%3A0xa938af87357ea254!2sCasa+de+Gobierno!5e0!3m2!1sen!2sbo!4v1476883945128" width="90%" height="70%" frameborder="0" style="border:0;" allowfullscreen></iframe>	
 				</div>
 				<div class="col s12 l6 height-vh-important align-horizontal-vertical">
-					<form method="POST">
+					<form method="POST" action="index.html">
 		    			<div class="row margin-botton">
 		    				<div class="col s12">
 		    					<h5 class="h5-bold">Contáctanos</h5>
