--- a/noticia.html
+++ b/noticia.html
@@ -19,15 +19,15 @@
 	</div>
 
 	<div class="container-fluid position-relative">
-		<div class="row margin-clean padding-clean background-none width-full">
-			<div class="col s12 margin-clean padding-clean background-none height-banner">
+		<div class="row margin-clean-important background-none width-full">
+			<div class="col s12 padding-clean-important background-none height-banner">
 				<img id="img-datahub" src="assets/images/institucion/datahub.png" class="width-full responsive-img" />
 			</div>
 		</div>
 	</div>
 
 
-	<div class="container-fluid">
+	<div class="container-fluid margin-top-datahub">
 		<div class="row">
 			<div class="col s12 m6 padding-left-em padding-right-em">
 				<p class="text-justify padding-p">
