--- a/noticia.html
+++ b/noticia.html
@@ -9,9 +9,23 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 
 </head>
-<body>
+<body id="content-print">
 
-	<div class="position-relative">
+	<header class="container-fluid position-fixed header-print width-full z-content-header background-header">
+		<div class="row">
+			<div class="col s3" id="img-gobernacion">
+				<!-- <img src="assets/images/institucion/logogobernacion.png" width="150" alt=""> -->
+			</div>
+			<div class="col s6 cabecera">
+				
+			</div>
+			<div class="col s3 right-align" id="img-ice">
+				<!-- <img src="assets/images/institucion/logoice.png" width="150" alt=""> -->
+			</div>
+		</div>
+	</header>
+
+	<div class="position-relative noPrint">
 		<a href="index.html" class="position-fixed position-align background-btn-back tamano-icon-back align-horizontal-vertical color-icon-back">
 			<i class="large material-icons color-icon-back">keyboard_arrow_left</i>
 			Atras
@@ -69,10 +83,10 @@
 				<a href="#">
 					<img src="assets/images/icons/twitter.svg" class="tamano-icons-estadistica">
 				</a>
-				<a href="#">
+				<a href="#" id="btnDownloadPdf">
 					<img src="assets/images/icons/pdf.svg" class="tamano-icons-estadistica">
 				</a>
-				<a href="#">
+				<a href="#" id="btnPrintPage">
 					<img src="assets/images/icons/printer.svg" class="tamano-icons-estadistica">
 				</a>
 			</div>
@@ -87,9 +101,10 @@
 		</div>
 	</div>
 
-	<i class="ir-arriba material-icons">keyboard_arrow_up</i>
+	<i class="ir-arriba material-icons noPrint">keyboard_arrow_up</i>
 
 	<script src="assets/js/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
 	<script src="assets/js/materialize.min.js"></script>
 
 	<script type="text/javascript">
@@ -104,6 +119,15 @@
 			$(window).scroll(function() {
 				viewBtnUp()
 			})
+
+			$('#btnPrintPage').click(function() {
+				printPage()
+			})
+
+			$('#btnDownloadPdf').click(function() {
+				downloadPdf()
+			})
+
 		})
 	
 		function viewBtnUp() {
@@ -113,8 +137,29 @@
 				$('.ir-arriba').slideUp(300)
 			}
 		}	
-		
 
+		function printPage() {
+			$("html, body").animate({
+				scrollTop: 0
+			}, 0, function() {
+				window.print()
+				return false	
+			})
+			
+		}
+		
+		function downloadPdf() {
+			var doc = new jsPDF({
+				orientation: 'portrait'
+			})
+
+			doc.addHTML($('#content-print')[0], 15, 15, {
+				'background': '#fff',
+				'border':'2px solid white',
+			}, function() {
+				doc.save('sample.pdf')
+			})	
+		}
 		
 	</script>
 </body>
