--- a/noticia.html
+++ b/noticia.html
@@ -14,13 +14,13 @@
 	<header class="container-fluid position-fixed header-print width-full z-content-header background-header">
 		<div class="row">
 			<div class="col s3" id="img-gobernacion">
-				<!-- <img src="assets/images/institucion/logogobernacion.png" width="150" alt=""> -->
+				<img src="assets/images/institucion/logogobernacion.png" width="150" alt="">
 			</div>
 			<div class="col s6 cabecera">
 				
 			</div>
 			<div class="col s3 right-align" id="img-ice">
-				<!-- <img src="assets/images/institucion/logoice.png" width="150" alt=""> -->
+				<img src="assets/images/institucion/logoice.png" width="150" alt="">
 			</div>
 		</div>
 	</header>
